CMAKE_MINIMUM_REQUIRED(VERSION 3.3)

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")

FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/include)
SET(the_target "mocap_cali")
ADD_EXECUTABLE(${the_target} main.cpp)

target_link_libraries(${the_target} ${OpenCV_LIBS})